--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,6 @@
 
 </head>
 <body>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/client.js"></script>
 </body>
 </html>
