--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            color: white;
+            text-align: center; 
+        }
+
+        body{
+            margin: 0;
+            height: 100vh;
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+        }
+    </style>
 </head>
 <body>
     <h1>Server is up and running...</h1>
